# fitz-graveyard

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.fitz-graveyard/plans/: plan_17561744aa63_20260310_081147.md  plan_a3d0d600c0e4_20260310_082940.md  plan_ae4f72af1f34_20260315_223937.md  plan_c5d87d81cf97_20260310_081700.md  plan_ea88af9dc2e4_20260301_144045.md  plan_ef66a297ee3a_20260310_074112.md
.github/workflows/: publish.yml  test.yml
benchmarks/: __main__.py  eval_plans.py  eval_prompt.py  eval_retrieval.py  eval_schemas.py  ideal_context.json  plan_factory.py
benchmarks/results/: streaming-task-tracker.md
benchmarks/results/reasoning_20260314_131607/: SUMMARY.md  plan_01.json  plan_02.json  plan_03.json  plan_04.json  plan_05.json  run_01.json  run_02.json  run_03.json  run_04.json  run_05.json
benchmarks/results/reasoning_20260315_013456/: SUMMARY.md  plan_01.json  plan_02.json  plan_03.json  plan_04.json  plan_05.json  run_01.json  (+4 more)
docs/: backlog_quality_infra.md  feature-agentic-exploration.md  feature-integrated-model-loading.md  overnight-run-report-20260324.md  pipeline-comparison.md  plan-decomposed-pipeline.md  postmortem-wmi-deadlock.md
docs/findings/: fabrication-analysis.md  findings-20260324.md
docs/roadmap/: scaling-agentic-search.md
fitz_graveyard/: __init__.py  __main__.py  cli.py  logging_config.py  server.py
fitz_graveyard/api_review/: __init__.py  client.py  cost_calculator.py  schemas.py
fitz_graveyard/background/: __init__.py  lifecycle.py  signals.py  worker.py
fitz_graveyard/config/: __init__.py  loader.py  schema.py
fitz_graveyard/llm/: __init__.py  client.py  factory.py  gpu_monitor.py  llama_cpp.py  lm_studio.py  memory.py  retry.py  types.py
fitz_graveyard/models/: __init__.py  jobs.py  responses.py  schema.py  sqlite_store.py  store.py
fitz_graveyard/planning/: __init__.py  clarification.py
fitz_graveyard/tools/: __init__.py  cancel_review.py  check_status.py  confirm_review.py  create_plan.py  get_plan.py  list_plans.py  replay_plan.py  retry_job.py
fitz_graveyard/validation/: __init__.py  sanitize.py
fitz_planner_mcp/: __init__.py  __main__.py  logging_config.py  server.py
fitz_planner_mcp/api_review/: __init__.py  client.py  cost_calculator.py  schemas.py
fitz_planner_mcp/background/: __init__.py  lifecycle.py  signals.py  worker.py
fitz_planner_mcp/config/: __init__.py  loader.py  schema.py
fitz_planner_mcp/llm/: __init__.py  client.py  memory.py  retry.py
fitz_planner_mcp/models/: __init__.py  jobs.py  responses.py  schema.py  sqlite_store.py  store.py
fitz_planner_mcp/planning/: __init__.py
fitz_planner_mcp/tools/: __init__.py  cancel_review.py  check_status.py  confirm_review.py  create_plan.py  get_plan.py  list_plans.py  retry_job.py
fitz_planner_mcp/validation/: __init__.py  sanitize.py
tests/unit/: test_agent_gatherer.py  test_agent_stages.py  test_agent_tools.py  test_api_review_client.py  test_api_review_schemas.py  test_call_graph.py  test_cancel_review.py  test_cli.py  test_compressor.py  test_confidence.py  test_confirm_review.py  test_decision_resolution.py  test_decision_schemas.py  test_diagnostics.py  test_gpu_monitor.py  test_grounding_instruction.py  test_indexer.py  test_krag_client.py  test_krag_stages.py  test_llama_cpp_client.py  test_llm_client.py  test_lm_studio_client.py  test_memory_monitor.py  test_pipeline_infra.py  test_pipeline_integration.py  test_schemas.py  test_sqlite_store.py  test_stages.py  test_tools_integration.py  test_validators.py  test_worker.py  test_worker_ollama.py  test_worker_pipeline.py
(+209 files in other folders)
