# fitz-graveyard/pyproject.toml
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitz-graveyard"
version = "0.2.0"
description = "MCP server for local-first AI architectural planning using local LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Yan Fitzer", email = "yan@example.com" }
]
keywords = ["mcp", "planning", "ai", "model-context-protocol", "ollama", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "ollama>=0.4.0",
    "tenacity>=9.0.0",
    "psutil>=6.1.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
api-review = [
    "anthropic>=0.40",
    "CurrencyConverter>=0.17",
]
lm-studio = ["openai>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/yafitzdev/fitz-graveyard"
Repository = "https://github.com/yafitzdev/fitz-graveyard"
Issues = "https://github.com/yafitzdev/fitz-graveyard/issues"
Documentation = "https://github.com/yafitzdev/fitz-graveyard#readme"

[project.scripts]
fitz-graveyard = "fitz_graveyard.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fitz_graveyard*"]
